# mu2e-trig-config

./: .gitignore  CMakeLists.txt  README.md  build-linux-almalinux9-x86_64_v2-qjm3rnm  build-linux-almalinux9-x86_64_v2-ueeuhcj
.github/workflows/: mu2e-build-single-pkg.yml  mu2e-develop-cpp-ci.yml  mu2e-test-single-pkg.yml  mu2e-tidy-single-pkg.yml
ci/: check_trigger_results.py  check_trigger_results.sh
core/: trigDigiInputsEpilog.fcl  trigFilters.fcl  trigProducers.fcl  trigRecoSequences.fcl  trigSequences.fcl  trigServices.fcl
core/filters/: trigAprFilters.fcl  trigCalFilters.fcl  trigCprFilters.fcl  trigCstFilters.fcl  trigDAQFilters.fcl  trigMprFilters.fcl  trigSupFilters.fcl  trigTprFilters.fcl
core/producers/: mu2eKinKalTrigger.fcl  trigAprProducers.fcl  trigCalProducers.fcl  trigCprProducers.fcl  trigCstProducers.fcl  trigDAQProducers.fcl  trigMprProducers.fcl  trigTprProducers.fcl  trigTrkProducers.fcl
data/: extrPosMenu.json  mdsMenu.json  noFieldMenu.json  physMenu.json  tmp.json  valMenu.json
python/: SConscript  genTimingFcl.py  genWrapper  generateMenuFromJSON.py
test/: mainTriggerTest.fcl  timingTest.fcl  triggerMDSTest.fcl  triggerNoFieldTest.fcl  triggerTest.fcl
